2008-02-14  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: Fixed highlighting bracket drawing
	  issue.

2008-02-14  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/TextEditor.cs,
	  Mono.TextEditor/Caret.cs: Fixed caret drawing error.

2008-02-14  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/ISegment.cs, Mono.TextEditor/TextViewMargin.cs,
	  Mono.TextEditor/Segment.cs, Mono.TextEditor/LineSegment.cs: Fixed
	  folding marker drawing.

2008-02-14  Mike Krüger <mkrueger@novell.com> 

	* TangoLightStyle.xml, OblivionStyle.xml, UbuntuStyle.xml,
	  Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/TextEditor.cs,
	  Mono.TextEditor.Highlighting/Style.cs, C64Style.xml: Fixed some drawing
	  issues & speed bug with ctrl+home.

2008-02-14  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/ISegment.cs, Mono.TextEditor/DefaultEditActions.cs,
	  Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/Document.cs,
	  Mono.TextEditor/TextEditorData.cs, Mono.TextEditor/TextMarker.cs,
	  Mono.TextEditor/TextEditor.cs, Mono.TextEditor/Segment.cs,
	  Mono.TextEditor/LineSegment.cs,
	  Mono.TextEditor.Highlighting/SyntaxModeService.cs: Refactored much. Tab
	  stops should now work. I've changed the update behaviour a bit - so
	  expect some drawing issues (something updated too late or not updated at
	  all).  Drawing itself should go faster, but I don't have hard data here.

2008-02-14  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/TextEditor.cs: Fixed
	  mouse selection to the left bug.

2008-02-14  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Ignore leave events raised by pointer Grab,
	  since the pointer is not actually leaving the window.

2008-02-13  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: Fixed Bug 361473 - Incorrect placement
	  of the cursor with mouse click.
