@@ -1,5 +1,10 @@
 2008-02-14  Mike Krüger <mkrueger@novell.com> 
 
+	* Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/TextMarker.cs: Markers
+	  are now drawn with selection information.
+
+2008-02-14  Mike Krüger <mkrueger@novell.com> 
+
 	* Mono.TextEditor/TextViewMargin.cs: Fixed highlighting bracket drawing
 	  issue.
 
